--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/chai": "^4.2.7",
       "@types/mocha": "^5.2.7",
       "chai": "^4.2.0",
+      "cypress": "^3.8.1",
       "mocha": "^6.2.2",
       "ts-node": "^8.5.4",
       "typescript": "^3.7.4"
